# test-website

./: .gitignore  COPYING.md  Cargo.toml  LICENSE-MIT.txt  README.md  admin.html  flake.nix  index.html  login.html  setup.sql  start.sh
back/: Cargo.toml  Dockerfile  fly.toml  rust-toolchain.toml
back/migrations/: 0001_initial_migration.down.sql  0001_initial_migration.up.sql
back/src/: auth.rs  donations.rs  health.rs  main.rs  supporters.rs
back/src/auth/: signin.rs  signout.rs  signup.rs  validate.rs
back/src/users/: auth.rs  me.rs
back/src/users/auth/: signin.rs  signout.rs  signup.rs  validate.rs
db-fly-io/: fly.toml
front/: admin.html  index.html
front/css/: admin.css
front/js/: main.js
js/: main.js
nix/: mysql.nix
nix/phpMyAdmin/: default.nix  package.nix
src/: main.rs
