[package]
name = "signup"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "mysql",
  "macros",
  "time",
] }
time = "0.3.44"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.8.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
emval = "0.1.12"
thiserror = "2.0.17"
